# autiamtion_auditor

./: .env.example  .gitignore  Automaton_Auditor_Step_by_Step_Guide.md  Dockerfile  README.md  TRP1 Challenge Week 2_ The Automaton Auditor.txt  Week 2- Technical Tutorial 1-Langgraph.txt  architecture_diagram.md  docker-compose.yml  pyproject.toml  requirements.txt  run_test.py  starfield.html  test_judge.py
audit/report_bypeer_received/: report_2026-02-28_17-55-30.md
audit/report_onpeer_generated/: audit_report_20260228_180727.json
audit/report_onself_generated/: audit_report_20260228_164132.json
dashboard/: app.py  export_utils.py  main.py
dashboard/templates/: index.html
report/: report.md  rubric.json
reports/: report.md
src/: __init__.py  graph.py  langsmith_tracing.py  llm_providers.py  lm_studio.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
tests/: test_export.py  test_integration.py  test_llm_providers.py  test_state.py
